--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,13 @@ com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
+    kotlinOptions{
+        jvmTarget = "1.8"
+    }
 
     defaultConfig {
         applicationId "com.CVproject.wifi_solution"
-        minSdkVersion 21
+        minSdkVersion 29
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -42,6 +45,7 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.2.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-ml-vision:18.0.1'
+    implementation 'com.google.firebase:firebase-ml-vision-barcode-model:16.0.1'
 
     // Camera Library
     implementation 'androidx.camera:camera-core:1.0.0-beta04'
@@ -53,4 +57,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.fragment:fragment:1.3.0-alpha04'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha04'
+    implementation 'androidx.fragment:fragment-testing:1.3.0-alpha04'
 }
