--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
-    kotlinOptions{
+    kotlinOptions {
         jvmTarget = "1.8"
     }
 
@@ -27,7 +27,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
-        compileOptions{
+        compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
         }
@@ -46,12 +46,14 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-ml-vision:18.0.1'
     implementation 'com.google.firebase:firebase-ml-vision-barcode-model:16.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
 
     // Camera Library
     implementation 'androidx.camera:camera-core:1.0.0-beta04'
     implementation 'androidx.camera:camera-camera2:1.0.0-beta04'
     implementation 'androidx.camera:camera-lifecycle:1.0.0-beta04'
     implementation 'androidx.camera:camera-view:1.0.0-alpha10'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
