--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 }
 
 dependencies {
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
